--- a/src/main/resources/view/MainView.fxml
+++ b/src/main/resources/view/MainView.fxml
@@ -1,114 +1,131 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1"
+    fx:controller="app.controller.MainViewController">
    <top>
-      <MenuBar prefHeight="25.0" prefWidth="494.0" BorderPane.alignment="CENTER">
+      <MenuBar BorderPane.alignment="CENTER">
         <menus>
-          <Menu mnemonicParsing="false" text="Archivo">
+          <Menu text="Archivo">
             <items>
-              <MenuItem mnemonicParsing="false" text="Salir" />
-                  <MenuItem mnemonicParsing="false" text="Modo Oscuro" />
+              <MenuItem onAction="#salir" text="Salir" />
+              <MenuItem text="Modo Oscuro" />
             </items>
           </Menu>
-          <Menu mnemonicParsing="false" text="Acciones Rápidas">
+          <Menu text="Acciones Rápidas">
             <items>
-                  <MenuItem mnemonicParsing="false" text="Nuevo Evento" />
-              <MenuItem mnemonicParsing="false" text="Nueva Persona" />
-                  <MenuItem mnemonicParsing="false" text="Registrar Participante" />
+              <MenuItem onAction="#nuevoEvento" text="Nuevo Evento" />
+              <MenuItem onAction="#nuevaPersona" text="Nueva Persona" />
+              <MenuItem onAction="#registrarParticipante" text="Registrar Participante" />
             </items>
           </Menu>
         </menus>
       </MenuBar>
    </top>
+
    <center>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+      <AnchorPane BorderPane.alignment="CENTER">
          <children>
-            <TabPane scaleShape="false" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <TabPane tabClosingPolicy="UNAVAILABLE" AnchorPane.topAnchor="0" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0">
                <tabs>
+                  <!-- Eventos -->
                   <Tab text="Eventos">
                      <content>
-                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                        <AnchorPane>
                            <children>
-                              <TableView prefHeight="0.0" prefWidth="0.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                              <TableView fx:id="tablaEventos" AnchorPane.topAnchor="0" AnchorPane.bottomAnchor="54.0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0">
                                  <columns>
-                                    <TableColumn prefWidth="187.0" text="Nombre" />
-                                    <TableColumn prefWidth="186.0" text="Fecha Inicio" />
-                                    <TableColumn prefWidth="74.0" text="Duración" />
-                                    <TableColumn prefWidth="152.0" text="Estado" />
+                                    <TableColumn fx:id="nombreCol" text="Nombre" prefWidth="180" />
+                                    <TableColumn fx:id="fechaCol" text="Fecha Inicio" prefWidth="120" />
+                                    <TableColumn fx:id="duracionCol" text="Duración" prefWidth="80" />
+                                    <TableColumn fx:id="tipoCol" text="Tipo" prefWidth="100" />
+                                    <TableColumn fx:id="estadoCol" text="Estado" prefWidth="100" />
                                  </columns>
                                  <columnResizePolicy>
-                                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
                                  </columnResizePolicy>
                               </TableView>
-                              <Button layoutY="305.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="600.0" text="Nuevo Evento" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+                              <HBox spacing="10" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0">
+                                 <children>
+                                    <Button fx:id="btnNuevoEvento" text="Nuevo Evento" prefWidth="200" onAction="#nuevoEvento"/>
+                                    <Button fx:id="btnVerDetallesEvento" text="Ver Detalles" prefWidth="200" onAction="#verDetallesEvento"/>
+                                    <Button fx:id="btnEliminarEvento" text="Eliminar Evento" prefWidth="200" onAction="#eliminarEvento"/>
+                                 </children>
+                              </HBox>
                            </children>
                         </AnchorPane>
                      </content>
                   </Tab>
+
+                  <!-- Personas -->
                   <Tab text="Personas">
                      <content>
-                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                        <AnchorPane>
                            <children>
-                              <TableView layoutX="-1.0" prefHeight="0.0" prefWidth="0.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                              <TableView fx:id="tablaPersonas" AnchorPane.topAnchor="0" AnchorPane.bottomAnchor="54.0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0">
                                  <columns>
-                                    <TableColumn prefWidth="196.0" text="Nombre Completo" />
-                                    <TableColumn minWidth="0.0" prefWidth="123.0" text="DNI" />
-                                    <TableColumn minWidth="0.0" prefWidth="113.0" text="Teléfono" />
-                                    <TableColumn minWidth="0.0" prefWidth="173.0" text="Correo Electrónico" />
+                                    <TableColumn fx:id="nombrePersonaCol" text="Nombre Completo" prefWidth="200" />
+                                    <TableColumn fx:id="dniCol" text="DNI" prefWidth="100" />
+                                    <TableColumn fx:id="telefonoCol" text="Teléfono" prefWidth="100" />
+                                    <TableColumn fx:id="correoCol" text="Correo Electrónico" prefWidth="200" />
                                  </columns>
                                  <columnResizePolicy>
-                                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
                                  </columnResizePolicy>
                               </TableView>
-                              <Button layoutX="-1.0" layoutY="306.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="600.0" text="Nueva Persona" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+                              <HBox spacing="10" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0">
+                                 <children>
+                                    <Button fx:id="btnNuevaPersona" text="Nueva Persona" prefWidth="300" onAction="#nuevaPersona"/>
+                                    <Button fx:id="btnEliminarPersona" text="Eliminar Persona" prefWidth="300" onAction="#eliminarPersona"/>
+                                 </children>
+                              </HBox>
                            </children>
                         </AnchorPane>
                      </content>
                   </Tab>
+
+                  <!-- Participantes -->
                   <Tab text="Participantes">
                      <content>
-                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                        <AnchorPane>
                            <children>
-                              <TableView prefHeight="307.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                              <TableView fx:id="tablaParticipantes" AnchorPane.topAnchor="0" AnchorPane.bottomAnchor="54.0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0">
                                  <columns>
-                                    <TableColumn prefWidth="178.0" text="Nombre" />
-                                    <TableColumn minWidth="0.0" prefWidth="247.0" text="Contacto" />
-                                    <TableColumn minWidth="0.0" prefWidth="174.0" text="Evento Asociado" />
+                                    <TableColumn fx:id="nombreParticipanteCol" text="Nombre" prefWidth="180" />
+                                    <TableColumn fx:id="contactoParticipanteCol" text="Contacto" prefWidth="200" />
+                                    <TableColumn fx:id="eventoAsociadoCol" text="Evento Asociado" prefWidth="220" />
                                  </columns>
                                  <columnResizePolicy>
-                                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
                                  </columnResizePolicy>
                               </TableView>
-                              <Button layoutX="-1.0" layoutY="289.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="600.0" text="Registrar Participante" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+                              <HBox spacing="10" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0">
+                                 <children>
+                                    <Button fx:id="btnRegistrarParticipante" text="Registrar Participante" prefWidth="400" onAction="#registrarParticipante"/>
+                                    <Button fx:id="btnEliminarParticipante" text="Eliminar Participante" prefWidth="200" onAction="#eliminarParticipante"/>
+                                 </children>
+                              </HBox>
                            </children>
                         </AnchorPane>
                      </content>
                   </Tab>
+
+                  <!-- Calendario -->
                   <Tab text="Calendario">
                      <content>
-                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                        <AnchorPane>
                            <children>
-                              <DatePicker layoutX="19.0" layoutY="20.0" prefHeight="25.0" prefWidth="561.0" />
-                              <TableView layoutX="19.0" layoutY="45.0" prefHeight="306.0" prefWidth="560.0">
+                              <DatePicker fx:id="selectorFecha" layoutX="20.0" layoutY="15.0" prefWidth="760.0" />
+                              <TableView fx:id="tablaEventosDia" layoutX="20.0" layoutY="50.0" prefWidth="760.0" prefHeight="450.0">
                                  <columns>
-                                    <TableColumn prefWidth="75.0" text="C1" />
-                                    <TableColumn prefWidth="75.0" text="C2" />
+                                    <TableColumn fx:id="eventoDiaCol" text="Evento" prefWidth="300.0" />
+                                    <TableColumn fx:id="horarioDiaCol" text="Horario" prefWidth="200.0" />
+                                    <TableColumn fx:id="lugarDiaCol" text="Lugar" prefWidth="260.0" />
                                  </columns>
                                  <columnResizePolicy>
-                                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
                                  </columnResizePolicy>
                               </TableView>
                            </children>
