--- a/src/main/resources/view/NuevoEventoDialog.fxml
+++ b/src/main/resources/view/NuevoEventoDialog.fxml
@@ -11,7 +11,7 @@
         Complete los detalles del nuevo evento.
     </headerText>
     <content>
-        <VBox spacing="10">
+<VBox spacing="10" prefHeight="500" prefWidth="600">
             <padding>
                 <Insets top="20" right="20" bottom="20" left="20"/>
             </padding>
@@ -19,8 +19,8 @@
             <!-- Contenedor principal de los campos comunes usando GridPane para mejor alineación -->
             <GridPane hgap="10" vgap="10">
                 <columnConstraints>
-                    <ColumnConstraints hgrow="NEVER" maxWidth="Infinity" minWidth="100.0" prefWidth="120.0" />
-                    <ColumnConstraints hgrow="ALWAYS" maxWidth="Infinity" minWidth="10.0" prefWidth="200.0" />
+                    <ColumnConstraints hgrow="NEVER" maxWidth="Infinity" minWidth="200.0" prefWidth="220.0" />
+                    <ColumnConstraints hgrow="ALWAYS" maxWidth="Infinity" minWidth="100.0" prefWidth="300.0" />
                 </columnConstraints>
                 
                 <!-- Fila 1: Nombre -->
